--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,7 @@
                     <input id="postMessage" type="submit" value="Post" />
                 </form>
             </section>
-            <section id="wall">
-                <!--
-                <div id="the message ID" class="message">
-                    <p>The message content</p>
-                </div>
-                -->
-            </section>
+            <section id="wall"></section>
         </main>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/main.js"></script>
